--- a/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
@@ -1,7 +1,7 @@
 ﻿@using Bundles2
 @using Microsoft.AspNetCore.Components.Web;
 
-<div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton);">
+<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
     <div>
         <label style="margin-bottom: 10px;">Enlace:</label>
         <input type="text" @oninput="TextoCambiaEnlace" class="entrada-texto" value="@bundle.Enlace" />
@@ -10,7 +10,7 @@
 
 @if (enlace != null)
 {
-    <div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton); margin-top: 40px;">
+    <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-top: 20px;">
         <div>
             <label style="margin-bottom: 10px;">Nombre:</label>
             <input @onchange="@(e => TextoCambiaNombre(e))" class="entrada-texto" value="@bundle.NombreBundle">
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton); margin-top: 40px;">
+    <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-top: 20px;">
         <div>
             @if (bundle.Juegos != null)
             {
@@ -192,7 +192,7 @@
         </div>
     </div>
 
-    <div class="perfil" style="padding: 20px; border: 1px solid var(--fondoBoton); margin-top: 40px;">
+    <div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px; margin-top: 20px;">
         <div style="display: flex; width: 33%;">
             <button @onclick="@(e => AñadirBundle(e))" class="boton" style="text-align: center;">Añadir Bundle</button>
         </div>
