--- a/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Pendientes.razor
@@ -585,7 +585,14 @@
                             }
                         }
                     }
-                }              
+                }    
+                else
+                {
+                    buscadorPendientesJuegos = new List<global::Juegos.Juego>();
+                    buscadorPendientesDLCs = new List<global::Juegos.Juego>();
+                    buscadorPendientesBandasSonoras = new List<global::Juegos.Juego>();
+                    buscadorPendientesSoftware = new List<global::Juegos.Juego>();
+                }
             }
             else
             {
