--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -92,6 +92,7 @@
                     usuarioAvatar = usuario?.Avatar,
                     usuarioNombre = usuario?.Nickname,
                     usuarioEmail = usuario?.Email,
+                    usuarioCoins = usuario?.RewardsCoins,
                     ubicacionEnlace = ubicacionEnlace
                 }))
             </div>
