--- a/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Minimos.razor
@@ -404,44 +404,12 @@
 	private Usuario usuario = new Usuario();
 	private List<string> usuarioJuegosSteam = new List<string>();
 
-	protected override async Task OnInitializedAsync()
+	protected override async void OnInitialized()
 	{
-		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
+		usuario = await Herramientas.UsuarioDatos.Actualizar(HttpContextAccessor.HttpContext.User, usuario, UserManager);
 
 		if (usuario != null)
 		{
-			if (string.IsNullOrEmpty(usuario.SteamAccount) == false && string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
-			{
-				bool tiempo = true;
-
-				if (string.IsNullOrEmpty(usuario.SteamAccountLastCheck) == false)
-				{
-					if (Convert.ToDateTime(usuario.SteamAccountLastCheck) + TimeSpan.FromDays(7) > DateTime.Now)
-					{
-						tiempo = false;
-					}
-				}
-
-				if (tiempo == true)
-				{
-					SteamUsuario datos = await APIs.Steam.Cuenta.CargarDatos(usuario.SteamAccount);
-
-					usuario.SteamGames = datos.Juegos;
-					usuario.SteamWishlist = datos.Deseados;
-					usuario.Avatar = datos.Avatar;
-					usuario.Nickname = datos.Nombre;
-					usuario.SteamAccountLastCheck = DateTime.Now.ToString();
-					usuario.OfficialGroup = datos.GrupoPremium;
-					usuario.OfficialGroup2 = datos.GrupoNormal;
-
-					try
-					{
-						await UserManager.UpdateAsync(usuario);
-					}
-					catch { }				
-				}
-			}
-
 			if (string.IsNullOrEmpty(usuario.SteamGames) == false)
 			{
 				usuarioJuegosSteam = Herramientas.Listados.Generar(usuario.SteamGames);
